--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-fullpage": "^0.3.1"
   },
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
